# Keyed

./: .gitignore  README.md  SOLSHARE_SPEC.md  docker-compose.yml
.cursor/plans/: solshare_v1_build_plan_e8547fb5.plan.md
.github/workflows/: deploy.yml
ai-service/: requirements.txt
ai-service/app/: config.py  main.py
ai-service/docs/: AI_SERVICE_IMPLEMENTATION.md
ai-service/tests/: test_api.py  test_pipeline.py  test_ssrf.py
backend/: .env.example  package-lock.json  package.json  railway.worker.json  vitest.e2e.config.ts
backend/idl/: solshare_airdrop.json  solshare_payment.json  solshare_token_gate.json
backend/migrations/: 006_privacy_tables.sql  007_pipeline_tables.sql  008_subscription_price.sql  009_nullable_content_uri.sql  010_airdrop_onchain_columns.sql
backend/src/: index.ts  worker.ts
backend/tests/: asyncHandler.test.ts  cache.test.ts  (+2 more)
docs/: CODEMAP.md  DOCKER.md  FRONTEND_TECHNICAL_SPEC.md  PRIVACY_INTEGRATION_STATUS.md  SECURITY_AUDIT_REPORT.md  SOLSHARE_SPEC.md  TECHNICAL_DOCS.md
frontend/: .gitignore  empty-module.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
scripts/: deploy-checklist.sh
solshare/: Anchor.toml  FIX_REVIEW_REPORT.md  package.json
solshare/programs/solshare-payment/: Cargo.toml
solshare/programs/solshare-payment/src/: error.rs  lib.rs  state.rs
solshare/programs/solshare-payment/src/instructions/: cancel_subscription.rs  initialize_platform.rs  initialize_vault.rs  mod.rs  process_subscription.rs  subscribe.rs  tip_creator.rs  withdraw.rs
(+233 files in other folders)
