[package]
name = "solshare-payment"
version = "0.1.0"
description = "SolShare Payment Program - Tips, Subscriptions, and Creator Earnings"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solshare_payment"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
